<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/bg_night">

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/txt_EmailAddress"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154"
        app:layout_constraintWidth_percent=".8"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColorHint="@color/light_blue"/>

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:text="Forgot Password?"

        android:textColor="@color/white_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtPassword"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        app:layout_constraintVertical_bias="0.004"
        />

    <TextView
        android:id="@+id/lblOrLoginWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_lblLoginOption"
        android:textColor="@color/white_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.084" />

    <Button
        android:id="@+id/btnLoginBiometrics"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/button_bg"
        android:text="@string/txt_btnLoginBiometric"
        android:textColor="@color/bg_night"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblOrLoginWith"
        app:layout_constraintVertical_bias="0.092"
        app:layout_constraintWidth_percent=".8" />


    <Button
        android:id="@+id/btnLoginSSO"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/button_bg"
        android:text="@string/txt_btnLoginSSO"
        android:textColor="@color/bg_night"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginBiometrics"
        app:layout_constraintVertical_bias="0.092"
        app:layout_constraintWidth_percent=".8" />

    <EditText

        android:id="@+id/txtPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/txt_Password"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        app:layout_constraintVertical_bias="0.001"
        app:layout_constraintWidth_percent=".8"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColorHint="@color/light_blue"/>


    <TextView
        android:id="@+id/txtViewNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/bg_night"
        android:text="@string/txt_btnSignUp"
        android:textColor="@color/light_blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toBottomOf="@id/txtPassword"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/button_bg"
        android:text="@string/txt_btnLogin"
        android:textColor="@color/bg_night"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554"
        app:layout_constraintWidth_percent=".8" />


</androidx.constraintlayout.widget.ConstraintLayout>