<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BudgetsMenu"
    android:background="@drawable/bg_img">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- this is the toolbar -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="parent" >
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBudgetsMenu"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
                android:contentDescription="@string/txt_toolbarDesc"
                android:elevation="4dp"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">

                <ImageView
                    android:id="@+id/imgHamburger"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_menu"
                    app:tint="@color/white"
                    android:layout_gravity="end"
                    android:layout_marginEnd="30dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/txt_budgetMenu"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:textStyle="bold" />


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>
        <TextView
            android:id="@+id/btnAddIncome"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="180dp"
            android:text="@string/txt_addIncome"
            android:textColor="@color/gunmetal"
            android:textAlignment="center"
            android:paddingTop="8dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@drawable/bg_total"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar"/>

        <TextView
            android:id="@+id/btnCreateNewBudget"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/txt_createNewBudget"
            android:textColor="@color/gunmetal"
            android:textAlignment="center"
            android:paddingTop="8dp"
            android:textSize="25sp"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:background="@drawable/bg_total"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnAddIncome"/>

        <TextView
            android:id="@+id/btnViewBudgets"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/txt_viewBudgets"
            android:textColor="@color/gunmetal"
            android:textAlignment="center"
            android:paddingTop="8dp"
            android:textSize="25sp"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:background="@drawable/bg_total"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCreateNewBudget"/>


        <!-- Bottom Navigation View -->
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavBudgetMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:itemTextColor="@color/gunmetal"
            app:itemIconSize="30dp"
            app:itemIconTint="@color/gunmetal"
            app:menu="@menu/bottom_menu"
            android:focusable="true"
            android:background="@drawable/bg_bottom_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- this is the navigation view -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:fitsSystemWindows="true"
        app:menu="@menu/nav_menu" >

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>